[BPK-794] Fix chrome overflow scroll bug
Explicitly hiding the thead and tbody prevents the issue and also still works
with screenreaders.

--- a/packages/bpk-component-barchart/src/bpk-chart-data-table.scss
+++ b/packages/bpk-component-barchart/src/bpk-chart-data-table.scss
@@ -2,4 +2,9 @@
 
 .bpk-chart-data-table {
   @include bpk-visually-hidden;
+
+  thead,
+  tbody {
+    @include bpk-visually-hidden;
+  }
 }
